# object-oriented-programming

./: CMakeLists.txt  main.cpp
tasks/lecture/0/: input.txt  output.csv  word_count  word_count.cpp
tasks/lecture/1/: CMakeLists.txt  Image.cpp  Image.h  Range.cpp  Range.h  imgtool  main.cpp  ops.cpp  ops.h  ppm_io.cpp  ppm_io.h  test.ppm  tests_gtest.cpp
tasks/lecture/2/: CMakeLists.txt  README.md
tasks/lecture/2/configs/: AdaptiveGrim.cfg  MetaMajority.cfg  Random.cfg
tasks/lecture/2/include/: CLI.hpp  GameRunner.hpp  PayoffMatrix.hpp  Strategy.hpp  StrategyFactory.hpp
tasks/lecture/2/plugins/AdaptiveGrim/: plugin.cpp
tasks/lecture/2/src/: GameRunner.cpp  PayoffMatrix.cpp  StrategyFactory.cpp  main.cpp
tasks/lecture/2/src/strategies/: BuiltinStrategies.cpp  BuiltinStrategies.hpp
tasks/lecture/2/tests/: pd3_tests.cpp
tasks/lesson/1/: solution-executable  solution.cpp
